Fix flickering

--- a/packages/styles/src/components/header/_post-header.scss
+++ b/packages/styles/src/components/header/_post-header.scss
@@ -89,7 +89,7 @@ body:has(post-header) {
 }
 
 post-header {
-  height: var(--post-header-height);
+  height: var(--post-header-expanded-height);
 
   &:not(:defined),
   &:not([data-hydrated]) {
